# Brain

./: pyproject.toml
brain/: __init__.py  util.py
notebooks/: brain.ipynb  brain_prototyping.ipynb
