[project]
name = "brain"
version = "0.1.0"
description = ""
authors = [
    {name = "Tyler Jowers",email = "jowerstc@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "semver (>=3.0.4,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

